--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     .footer strong { color:#e2e8f0; }
     .footer.hidden { opacity:0; pointer-events:none; }
     .hidden { display:none; }
+    .site-container { position:relative; width:100%; height:100%; }
+    .floating-back { position:absolute; top:10px; left:10px; background:#e76f51; color:white; border:none; border-radius:50%; width:50px; height:50px; font-size:1.8rem; cursor:pointer; display:flex; align-items:center; justify-content:center; box-shadow:0 4px 12px rgba(0,0,0,0.4); z-index:999999; transition:0.2s; }
+    .floating-back:hover { background:#d32f2f; transform:scale(1.1); }
   </style>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -44,7 +47,10 @@
   </div>
 
   <div class="main hidden" id="viewer">
-    <iframe id="siteFrame" sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-modals"></iframe>
+    <div class="site-container">
+      <button class="floating-back" id="floatingBack" onclick="goBack()">×</button>
+      <iframe id="siteFrame" sandbox="allow-scripts allow-same-origin allow-forms allow-popups allow-modals allow-top-navigation"></iframe>
+    </div>
   </div>
 
   <div class="footer" id="footer">
@@ -57,53 +63,34 @@
     const viewer = document.getElementById('viewer');
     const frame = document.getElementById('siteFrame');
     const backBtn = document.getElementById('backBtn');
+    const floatingBack = document.getElementById('floatingBack');
     const footer = document.getElementById('footer');
-    let inSite = false;
-    const KIOSK_URL = window.location.href;
 
     function openAllDaf() {
-      inSite = true;
       menu.classList.add('hidden');
       viewer.classList.remove('hidden');
       backBtn.classList.remove('hidden');
+      floatingBack.style.display = 'flex';
       footer.classList.add('hidden');
       frame.src = 'https://alldaf.org/';
     }
 
     function openIDaf() {
-      inSite = true;
-      const idafUrl = 'http://www.idafyomi.com/';
-      const injectedHTML = `
-        <!DOCTYPE html>
-        <html>
-        <head>
-          <meta charset="utf-8">
-          <style>
-            body, html { margin:0; padding:0; height:100%; overflow:hidden; }
-            .kiosk-back {
-              position:fixed; top:10px; left:10px; background:#e76f51; color:white;
-              border:none; border-radius:50%; width:50px; height:50px;
-              font-size:1.8rem; cursor:pointer; display:flex;
-              align-items:center; justify-content:center; box-shadow:0 4px 12px rgba(0,0,0,0.4);
-              z-index:999999; transition:0.2s;
-            }
-            .kiosk-back:hover { background:#d32f2f; transform:scale(1.1); }
-            iframe { position:absolute; top:0; left:0; width:100%; height:100%; border:none; }
-          </style>
-        </head>
-        <body>
-          <button class="kiosk-back" onclick="window.location.href='${KIOSK_URL}'">×</button>
-          <iframe src="${idafUrl}" allowfullscreen></iframe>
-        </body>
-        </html>
-      `;
-      const blob = new Blob([injectedHTML], { type: 'text/html' });
-      const url = URL.createObjectURL(blob);
-      window.location.href = url;
+      menu.classList.add('hidden');
+      viewer.classList.remove('hidden');
+      backBtn.classList.remove('hidden');
+      floatingBack.style.display = 'flex';
+      footer.classList.add('hidden');
+      frame.src = 'http://www.idafyomi.com/';
     }
 
     function goBack() {
-      window.location.href = KIOSK_URL;
+      viewer.classList.add('hidden');
+      menu.classList.remove('hidden');
+      backBtn.classList.add('hidden');
+      floatingBack.style.display = 'none';
+      footer.classList.remove('hidden');
+      frame.src = '';
     }
 
     if (window.chrome?.kiosk) {
